--- a/public/music.css
+++ b/public/music.css
@@ -1,3 +1,65 @@
+/* navbar start */
+
+body {
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    position: relative;
+  }
+  
+  .topnav {
+    overflow: hidden;
+    background-color: #F6F2DF;
+  }
+  
+  .topnav a {
+    float: left;
+    display: block;
+    color: #003049;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+  .topnav a:hover {
+    background-color: #ddd;
+    color: #003049;
+  }
+  
+  .topnav a.active {
+    background-color: #04AA6D;
+    color: white;
+  }
+  
+  .topnav .icon {
+    display: none;
+  }
+  
+  @media screen and (max-width: 600px) {
+    .topnav a:not(:first-child) {display: none;}
+    .topnav a.icon {
+      float: right;
+      display: block;
+    }
+  }
+  
+  @media screen and (max-width: 600px) {
+    .topnav.responsive {position: relative;}
+    .topnav.responsive .icon {
+      position: absolute;
+      right: 0;
+      top: 0;
+    }
+    .topnav.responsive a {
+      float: none;
+      display: block;
+      text-align: left;
+    }
+  }
+  
+  /* navbar end */
+  
+
 *{
     margin: 0;
     padding: 0;
@@ -5,6 +67,8 @@
 }
 
 body{
+    margin: 0px;
+    padding: 0px;
     width: 100%;
     height: 100vh;
     display: flex;
@@ -50,7 +114,7 @@ body{
     height: 180px;
     border-radius: 50%;
     background: #000;
-    background-image: url('images/Connect and Company LOGO.png');
+    background-image: url('sky.jpg');
     background-size: cover;
     box-shadow: 0 0 0 10px rgba(255, 255, 255, 0, 0.08);  
     animation: rotate 20s linear infinite;
