--- a/public/stopwatch.css
+++ b/public/stopwatch.css
@@ -1,8 +1,70 @@
+/* navbar start */
+
+body {
+  margin: 0;
+  font-family: 'Quicksand', Helvetica, sans-serif;
+  position: relative;
+}
+
+.topnav {
+  overflow: hidden;
+  background-color: #F6F2DF;
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: #003049;
+  text-align: center;
+  padding: 15px 10px;
+  text-decoration: none;
+  font-size: 20px;
+}
+
+.topnav a:hover {
+  background-color: #EAE2B7;
+  color: #003049;
+}
+
+.topnav a.active {
+  background-color: #04AA6D;
+  color: white;
+}
+
+.topnav .icon {
+  display: none;
+}
+
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
+
+/* navbar end */
+
+
 :root {
-    --primary: crimson;
-    --dark:#1f2937;
-    --darker: #111827;
-    --light: #f3f4f6;
+    --primary: #F77F00;
+    --dark:#EAE2B7;
+    --darker: #F6F2DF;
+    --light: #003049;
   }
   
   * {
