--- a/public/style.css
+++ b/public/style.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@700&display=swap');
+
+
 /* navbar start */
 body {
     margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Quicksand', sans-serif;    
     position: relative;
 
   }
@@ -66,7 +69,7 @@ body {
 }
 
 body {
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Quicksand', sans-serif;
   min-height: 100vh;
   display: flex;
   justify-content: center;
@@ -204,8 +207,8 @@ body {
 }
 
 #todo_submit {
-  background-color: #4caf50;
-  color: #f3f3f3;
+  background-color: #F77F00;
+  color: #003049;
   font-size: 1.25rem;
   border: none;
 }
