--- a/public/music.css
+++ b/public/music.css
@@ -6,12 +6,14 @@
 body {
     margin: 0;
     font-family: 'Quicksand', sans-serif;    
-    position: relative;
+    /* position: relative; */
   }
   
   .topnav {
     overflow: hidden;
     background-color: #F6F2DF;
+    position: fixed;
+    top: 0;
   }
   
   .topnav a {
@@ -25,7 +27,7 @@ body {
   }
   
   .topnav a:hover {
-    background-color: #ddd;
+    background-color: #EAE2B7;
     color: #003049;
   }
   
@@ -77,19 +79,19 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    background: #5f7a61;
-    font-family: sans-serif, 'Times New Roman', Times, serif;
+    background: #F6F2DF;
+    font-family: 'Quicksand', sans-serif;
 }
 
 .music-player{
     width: 350px;
     height: 550px;
     border-radius: 20px;
-    background: rgba(255, 255, 255, 0, 0.08);
+    background: #EAE2B7;
     box-shadow: 0 40px 100px rgba(255, 255, 255, 0.1);
     padding: 30px;
     overflow: hidden;
-    color: #d5eebb;
+    color: #003049;
 }
 
 .music-name,
@@ -138,7 +140,7 @@ body{
     width: 30px;
     height: 30px;
     border-radius: 50%;
-    background: #5f7a61;
+    background: #003049;
 }
 
 .song-slider{
@@ -151,7 +153,7 @@ body{
     width: 100%;
     height: 5px;
     border-radius: 10px;
-    background: #7fc8a9;
+    background: #003049;
     overflow: hidden;
     cursor: pointer;
 }
@@ -188,7 +190,7 @@ body{
     width: 60px;
     height: 60px;
     border-radius: 50%;
-    background: #d5eebb;
+    background: #f77f00;
     cursor: pointer;
     border: none;
 }
@@ -201,7 +203,7 @@ body{
     width: 10px;
     height: 30px;
     border-radius: 2px;
-    background: #5f7a61;
+    background: #003049;
     transition: .5s;
     clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
 }
@@ -242,7 +244,7 @@ body{
 .btn{
     width: 40px;
     height: 40px;
-    background: #d5eebb;
+    background: #f77f00;
     border-radius: 50%;
     display: flex;
     justify-content: center;
