--- a/public/pomodoro.css
+++ b/public/pomodoro.css
@@ -11,12 +11,14 @@ body {
   padding: 0px;
   margin: 0;
   font-family: 'Quicksand', Helvetica, sans-serif;
-  position: relative;
+  /* position: relative; */
 }
 
 .topnav {
   overflow: hidden;
   background-color: #F6F2DF;
+  position: fixed;
+  top: 0;
 }
 
 .topnav a {
@@ -30,7 +32,7 @@ body {
 }
 
 .topnav a:hover {
-  background-color: #ddd;
+  background-color: #EAE2B7;
   color: #003049;
 }
 
@@ -81,7 +83,7 @@ body {
 }
 
 body {
-  padding: 35px;
+  padding: 30px;
   background-color: #F6F2DF;
   color: #003049;
   font-family: 'Quicksand', sans-serif;
@@ -89,7 +91,7 @@ body {
 #wrapper-main {
   max-width: 760px;
   margin: 20px auto 50px;
-  padding: 45px 60px;
+  padding: 45px 50px;
   border-radius: 10px;
   box-shadow: 0px 4px 8px 0px rgb(0 0 29 / 5%);
   background-color: #EAE2B7;
@@ -107,7 +109,7 @@ input {
   padding: 5px;
   background: rgba(0, 0, 0, 0.11);
   border: none;
-  color: #eee;
+  color: #003049;
 }
 .btn-group {
   display: flex;
@@ -126,7 +128,7 @@ button {
   width: 100%;
   font-size: 17px;
   font-weight: 600;
-  color: #eee;
+  color: #003049;
   line-height: 21px;
   background: transparent;
 } 
@@ -218,7 +220,7 @@ button i {
   transition: 0.0s;
   transform: rotate(-90deg);
   transform-origin: 50% 50%;
-  stroke: rgb(253, 143, 17);
+  stroke: #F77F00;
   z-index: 2;
 }
 
@@ -233,10 +235,7 @@ footer {
   width: 80%;
   margin: 0 auto;
   font-size: 14px;
-  color: rgba(255, 255, 255, 0.45);
-}
-footer a {
-  color: rgba(255, 255, 255, 0.45);
+  color: #003049;
 }
 
 .danger {
