finishing off readme and other small things

--- a/public/dictionary.css
+++ b/public/dictionary.css
@@ -74,6 +74,8 @@ body {
     align-items: center;
     justify-content: center;
     min-height: 100vh;
+    background: #F6F2DF;
+
 }
 .wrapper {
     width: 450px;
