--- a/public/pomodoro.css
+++ b/public/pomodoro.css
@@ -148,6 +148,8 @@ form button {
   margin: 5px 0;
   color: #003049;
   border: 1px solid #fac7c72a;
+  cursor: pointer;
+
 }
 form p {
   margin: 7px 0 0;
@@ -181,6 +183,8 @@ button i {
   padding: 0;
   margin: 0;
   line-height: 20px;
+  cursor: pointer;
+
 }
 .pause {
   transform: scale(0);
